Implement header, footer, usersHttp service, add routing and angular material dependency.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="header">
+  <div class="header-wrapper">
+    <div class="header__title">
+      <h1>Users List</h1>
+    </div>
+    <div class="header__filter">
+      <span class="header__filter__span_grey">Sorting by:</span>
+      <button>date</button>
+      <span class="header__filter__span_blue">by word or sentance</span>
+      <input type="text" class="header__filter__input" title="filter_word">
+    </div>
+  </div>
+</div>
