--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="footer-wrapper">
+    <span>&copy; 2021 &#171; Users List &#187; Created by Artyom Makarau.</span>
+    <ul class="footer__contacts">
+      <li><a href="https://makar6031994@gmail.com" target="_blank"><img src="../../assets/icons/mail-logo.svg" alt="mail"></a></li>
+      <li><a href="https://www.linkedin.com/in/artyom-makarov" target="_blank"><img src="../../assets/icons/linkedin-logo.svg" alt="linkedin"></a></li>
+    </ul>
+  </div>
+</div>
