--- a/src/app/users-list/pages/users-page/users-page.component.html
+++ b/src/app/users-list/pages/users-page/users-page.component.html
@@ -27,9 +27,11 @@
 
   <ng-container matColumnDef="info">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element"> <button class="users-table__button">more info</button> </td>
+    <td mat-cell *matCellDef="let element"> <button class="users-table__button" (click)="openModalWindow(element)">more info</button> </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<app-users-modal-window *ngIf="isModalOpened" [userInfo]="userInfo" (modalClosed)="closeModalWindow($event)"></app-users-modal-window>
