add tests to header component

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="header__filter">
       <span class="header__filter__span_grey">Sorting by:</span>
-      <button (click)="setFilterParams('name')">name</button>
-      <img src="../../../../assets/icons/sort-up.png" alt="sort icon" [hidden]="!showIcon" [ngClass]="{sortIcon: (isIncreased==false), sortIcon_rotate: (isIncreased==true)}">
+      <button (click)="setFilterParams('name')" type="button">name</button>
+      <img src="../../../../assets/icons/sort-up.png" alt="sortIcon" [hidden]="!showIcon" [ngClass]="{sortIcon: (isIncreased==false), sortIcon_rotate: (isIncreased==true)}">
       <span class="header__filter__span_blue">find user by name</span>
       <input type="text" class="header__filter__input" title="filter_word" #filterInput (change)="setFilterParams(filterInput.value)">
     </div>
