refactor components and services

--- a/src/app/users-list/pages/users-page/users-page.component.html
+++ b/src/app/users-list/pages/users-page/users-page.component.html
@@ -34,4 +34,4 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<app-users-modal-window *ngIf="isModalOpened" [userInfo]="userInfo" (modalClosed)="closeModalWindow($event)"></app-users-modal-window>
+<app-users-modal-window *ngIf="isModalOpened" [userInfo]="userInfo" (modalClosed)="closeModalWindow()"></app-users-modal-window>
